# public/docs/openapi.yaml
@@ -52,6 +52,12 @@ paths:
       $ref: './paths/cpcl-answers.yaml#/store'
   /cpcl-answers/{cpcl_document_id}:
       $ref: './paths/cpcl-answers.yaml#/detail'
+  /cpcl-documents/{cpcl_document_id}/fishing-vessels:
+      $ref: './paths/cpcl-fishing-vessels.yaml#/list'
+  /cpcl-documents/{cpcl_document_id}/fishing-vessels/store:
+      $ref: './paths/cpcl-fishing-vessels.yaml#/store'
+  /cpcl-documents/{cpcl_document_id}/fishing-vessels/update:
+      $ref: './paths/cpcl-fishing-vessels.yaml#/update'
 
 components:
   schemas:
